# goofish-cli-ext

./: .gitignore  README.md  cli.py  pyproject.toml
docs/: search_strategy_exhaustive.md
src/goofish_cli_ext/: __init__.py  cli.py
src/goofish_cli_ext/commands/: __init__.py  ascii_chart.py  copywriter.py  cron_price_watch.py  goofish-price-watch.sh  item.py  negotiation.py  platform_convert.py  playwright_search.py  price_watch.py  publish.py  search.py
