[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "goofish-cli-ext"
version = "0.7.0"
description = "闲鱼全能工具箱 — 搜索比价 + AI 文案生成 + 商品发布 + IM。基于 goofish-cli 扩展，吸收 xianyu-copywriter 文案模板。"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [{ name = "yan", email = "" }]
keywords = ["xianyu", "goofish", "cli", "copywriter", "ai-agent"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
  "goofish-cli>=0.2.4",
  "typer>=0.12",
  "rich>=13.7",
  "pyyaml>=6.0",
  "pydantic>=2.6",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.4",
]

[project.scripts]
goofish-x = "goofish_cli_ext.cli:app"
goofish-copy = "goofish_cli_ext.commands.copywriter:main_cli"

[tool.hatch.build.targets.wheel]
packages = ["src/goofish_cli_ext"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
ignore = ["E501"]
